[package]
name = "jung"
version = "0.1.0"
authors = ["Sujith Jay <sujith@sujithjay.com>"]

[dependencies]
raft = "0.4.0"
log = "0.4"
tokio = "0.1.11"
clap = "2.32"
rand = "0.4"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
protobuf = "1.4"
byteorder = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.1"
reqwest = "0.8.5"


[dependencies.murmur3]
git = "https://github.com/pingcap/murmur3.git"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto.git"
branch="release-2.1"

[replace]
"raft:0.3.1" = { git = "https://github.com/pingcap/raft-rs.git" }
