[package]
name = "jung"
version = "0.1.0"
authors = ["Sujith Jay <sujith@sujithjay.com>"]

[dependencies]
raft = "0.4.0"
log = "0.4"
env_logger = "0.5.5"
tokio = "0.1.11"
clap = "2.32"
rand = "0.6.0"
rocket = "0.3.17"
protobuf = "1.4"
byteorder = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam = "0.5.0"
reqwest = "0.9.5"


[dependencies.murmur3]
git = "https://github.com/pingcap/murmur3.git"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto.git"
branch="release-2.1"
